Fix Ventas ya graba la venta

--- a/frontFarm/src/app/admin/cortes-de-caja/cortes-de-caja.component.html
+++ b/frontFarm/src/app/admin/cortes-de-caja/cortes-de-caja.component.html
@@ -3,7 +3,7 @@
         <h1 class="titulo">Cortes de Caja</h1>
     </div>
 
-    <form [formGroup]="filtroForm" class="row mb-2">
+    <form [formGroup]="filtroForm" class="row mb-2 filter-container">
         <div class="col-md-3">
             <div class="d-flex align-items-center position-relative w-100">
                 <label class="me-2 mb-0" style="white-space: nowrap;">Desde:</label>
