--- a/frontFarm/src/app/pages/devoluciones/devoluciones.component.html
+++ b/frontFarm/src/app/pages/devoluciones/devoluciones.component.html
@@ -3,7 +3,7 @@
     <h1 class="titulo">Devoluciones</h1>
   </div>
 
-  <div class="row">
+  <div class="row filter-container">
     <div class="col-1"></div>
     <div class="col-2">
       <label class="lbl-folio-venta" for="filtroFolio">Folio de la venta:</label>
