--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -103,6 +103,9 @@
           {{ expandedSubMenu === 'ventas' ? '▲' : '▶' }}
         </span>
         <ul *ngIf="expandedSubMenu === 'ventas'" class="submenu">
+          <li [routerLink]="'reporte/ventas'" routerLinkActive="active" class="submenu-item">
+            <span>Ventas<fa-icon [icon]="'cash-register'" class="menu-icon"></fa-icon></span>
+          </li>
           <li [routerLink]="'reporte/ventas-producto'" routerLinkActive="active" class="submenu-item">
             <span>Un producto<fa-icon [icon]="icons.faReceipt" class="menu-icon"></fa-icon></span>
           </li>
