--- a/frontFarm/src/app/pages/compras/compras.component.css
+++ b/frontFarm/src/app/pages/compras/compras.component.css
@@ -1,8 +1,9 @@
 .compras-container {
-  width: 90%;
+  width: 100%;
   /*   max-width: 1000px;*/
   margin: 1rem auto;
   padding: 0 1rem;
+  
 }
 
 .header-form {
@@ -20,15 +21,16 @@
 
 .item-form {
   margin-bottom: 1rem;
-  border: 1px solid #ccc;
   padding: 1rem;
-  border-radius: 5px;
   font-size: large;
+  border-bottom: 2px solid #0453b3;
+
 }
 
 .item-form .buscar {
   display: flex;
   gap: 0.5rem;
+
   margin-bottom: 1.5rem;
 }
 
