--- a/frontFarm/src/app/pages/ventas/ventas.component.css
+++ b/frontFarm/src/app/pages/ventas/ventas.component.css
@@ -34,6 +34,7 @@
   align-items: center;
   gap: 14px;
   flex-wrap: wrap;
+  border-bottom: 2px solid #0453b3;
 }
 
 /* Asegura que todos los hijos se centren verticalmente */
