--- a/frontFarm/src/app/pages/reporte-ventas-por-farmacia/reporte-ventas-por-farmacia.component.html
+++ b/frontFarm/src/app/pages/reporte-ventas-por-farmacia/reporte-ventas-por-farmacia.component.html
@@ -1,10 +1,10 @@
-<div class="card p-3">
+<div class="p-3">
   <div class="titulo-container mb-2">
     <h2 class="mb-3 titulo">Productos vendidos</h2>
   </div>
 
   <!-- Filtros -->
-  <form (ngSubmit)="buscar()" class="row g-2 align-items-end filtros ">
+  <form (ngSubmit)="buscar()" class="row align-items-end filtros ">
     <div class="col-md-2">
       <label class="form-label">Farmacia</label>
       <select class="form-select" [(ngModel)]="farmaciaId" name="farmaciaId">
@@ -24,13 +24,13 @@
     </div>
 
     <div class="col-md-2 d-flex gap-2">
-      <button type="button" class="btn-rojo" (click)="limpiarFiltros()" [disabled]="cargando">
+      <button type="button" class="btn-rojo" (click)="limpiarFiltros()" [disabled]="cargando" matTooltip="Limpiar filtro">
         <i class="fas fa-times"></i>
       </button>
     </div>
 
-    <div class="col-md-2 d-flex gap-2">
-      <button class="btn-gris" type="submit" [disabled]="cargando">
+    <div class="col-auto ms-auto">
+      <button class="btn-gris float-end" type="submit" [disabled]="cargando">
         {{ cargando ? 'Buscando...' : 'Buscar' }}
       </button>
     </div>
@@ -43,7 +43,7 @@
   </div>
 
   <!-- Tabla -->
-  <div class="table-responsive mt-3">
+  <div class="mt-2">
     <table class="align-middle tabla">
       <thead>
         <tr>
