--- a/frontFarm/src/app/pages/reporte-ventas-por-farmacia/reporte-ventas-por-farmacia.component.html
+++ b/frontFarm/src/app/pages/reporte-ventas-por-farmacia/reporte-ventas-por-farmacia.component.html
@@ -1,5 +1,5 @@
-<div class="p-3">
-  <div class="titulo-container mb-2">
+<div class="p-1">
+  <div class="titulo-container">
     <h2 class="mb-3 titulo">Productos vendidos</h2>
   </div>
 
