--- a/frontFarm/src/app/pages/reporte-ventas-producto/reporte-ventas-producto.component.html
+++ b/frontFarm/src/app/pages/reporte-ventas-producto/reporte-ventas-producto.component.html
@@ -1,8 +1,8 @@
-<div class="card p-3">
+<div>
   <div class="titulo-container mb-2">
     <h2 class="titulo">Ventas por producto</h2>
   </div>
-  <form (ngSubmit)="buscar()" class="row g-2 align-items-end">
+  <form (ngSubmit)="buscar()" class="row align-items-end">
     <div class="row filtros">
       <div class="col-md-2">
         <label class="form-label">Farmacia</label>
