--- a/frontFarm/src/app/pages/reporte-ventas/reporte-ventas.component.html
+++ b/frontFarm/src/app/pages/reporte-ventas/reporte-ventas.component.html
@@ -1,7 +1,7 @@
 <div class="container-ventas">
-    <h2 class="titulo">Reporte de Ventas</h2>
+    <h2 class="titulo text-center">Reporte de Ventas</h2>
 
-    <div class="p-1 mb-2 filtros">
+    <div class="mb-2 filtros">
         <form [formGroup]="filtroForm" class="row g-2 align-items-end">
             <!-- Farmacia select -->
             <div class="col-md-3">
@@ -66,7 +66,7 @@
         </form>
     </div>
 
-    <div class="card p-3">
+    <div class="mt-2">
         <table class="tabla">
             <thead>
                 <tr>
